June 12 2002
============

*  NLNET: Added custumizable command with button using DisplayedVariables in the config file.
* NLMISC: Can lod config file inside of a bigfile using CIFile

June 6 2002
===========

* NLMISC: Added getFileSize();

* NLMISC: Now cut .log when they are greater then 5 mega bits;

*  NLNET: Added custumizable variable display using DisplayedVariables in the config file.

* NLMISC: Added += in the config file to append values in an array.

May 27 2002
===========

*  NLNET: -I command line and IWinParam config file variable to start services in minimized.

*  NLNET: getWinDisplayerInfo() command to have info about size and pos (copy/paste into .cfg)

May 21 2002
===========

*  NLNET: send() receive() and serial() are 3 times faster.

*  NLNET: layer 2 was removed because not useful and take some CPU for nothing.

* NLMISC: CFastMem::memcpy() copies a memory block as fast as possible depending of the OS and
          of the CPU.

* NLMISC: CSystemInfo class contains info on the processor type (MMX, SSE, and so on).

April 30 2002
=============

*  NLNET: Added 3 new variables "NegFiltersDebug" and "NegFiltersInfo" (array of string) that
          call addNegativeFilter at the init of the service. You could change these variables
          in realtime with a notepad.

* NLMISC: CPath::addSeachPath() class now filter CVS directory and *.log files.


April 23 2002
=============

*  NLNET: Added a new variable "StartCommands" (array of string) that execute these commands
          at the startup of the service (after the init() and before the first update()).

* NLMISC: Added a new variable "RootConfigFilename" (string) that is a config filename that
          will be read. It's used to set common variable in a common file for all services.


March 28 2002
=============

*  NLNET: Added a new command "serviceInfo" that displays usefull informations on the services.
