@@ -1,0 +1,4 @@
+"english"
+"hi" = "Hello"
+"%s is proud to present you NeL Internationalisation system" = "%s is proud to present you NeL Internationalisation system"
+"press <return> to exit" = "press <return> to exit"
