@@ -1,0 +1,4 @@
+"francais"
+"hi" = "Bonjour"
+"%s is proud to present you NeL Internationalisation system" = "%s est fiere de vous presenter le systeme d'internationalisation de NeL"
+"press <return> to exit" = "Appuyez sur <entree> pour quitter"
