@@ -1,3 +1,8 @@
+June 20 2002
+============
+
+* NLMISC: Added a i18n sample
+
 June 12 2002
 ============
 
